--- a/customerlist.html
+++ b/customerlist.html
@@ -210,8 +210,9 @@
             { customer: "Convertwater", make: "Muller", model: "CF150 E", regPlate: "FP73 GHD", buildNumber: "12142900", deliveryDate: "to be updated" },
             { customer: "Mantank", make: "Muller", model: "CF160 E rec. type I", regPlate: "FJ73 SXM", buildNumber: "12144600", deliveryDate: "to be updated" },
             { customer: "Merkland Tank", make: "Muller", model: "CF160 E rec. type I", regPlate: "FP73 GFA", buildNumber: "12144700", deliveryDate: "to be updated" },
-
-            
+            { customer: "Intech Environmental", make: "Muller", model: "CF160 E", regPlate: "FP73 EXD", buildNumber: "12142800", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Muller", model: "CF150 E", regPlate: "FP73 EXF", buildNumber: "12143000", deliveryDate: "to be updated" },
+            { customer: "Cargate Engineering", make: "Muller", model: "CF160 E rc. type I", regPlate: "MR73 JET", buildNumber: "12147100", deliveryDate: "to be updated" },               
         ];
 
         const tableBody = document.getElementById("truckTable");
