finished adding rolbas

--- a/customerlist.html
+++ b/customerlist.html
@@ -281,6 +281,57 @@
             { customer: "PRB Drainage Ltd", make: "Rolba", model: "Medium Combi", regPlate: "AY67 WHW", buildNumber: "1843", deliveryDate: "to be updated" },
             { customer: "Slicker Recycling", make: "Rolba", model: "Medium Combi", regPlate: "AY18 LZS", buildNumber: "1858", deliveryDate: "to be updated" },
             { customer: "Slicker Recycling", make: "Rolba", model: "Medium Combi", regPlate: "AY18 LZR", buildNumber: "1859", deliveryDate: "to be updated" },
+            { customer: "McBreen Environmental", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "1897", deliveryDate: "to be updated" },
+            { customer: "Slicker", make: "Rolba", model: "Medium Combi", regPlate: "FD68 EFX", buildNumber: "1904", deliveryDate: "to be updated" },
+            { customer: "Clearwater", make: "Rolba", model: "Medium Combi", regPlate: "SF69 YKB", buildNumber: "1912", deliveryDate: "to be updated" },
+            { customer: "Clearwater", make: "Rolba", model: "Rolba Super Combi", regPlate: "SJ19 KFK", buildNumber: "1912", deliveryDate: "to be updated" },
+            { customer: "Telcoss", make: "Rolba", model: "Medium Combi", regPlate: "FJ69 RFE", buildNumber: "1930", deliveryDate: "to be updated" },
+            { customer: "Clare Drains", make: "Rolba", model: "Medium Combi", regPlate: "221-CE-1235", buildNumber: "1974", deliveryDate: "to be updated" },
+            { customer: "Clare Drains", make: "Rolba", model: "Medium Combi", regPlate: "201-CE-1466", buildNumber: "1934", deliveryDate: "to be updated" },
+            { customer: "William Gilder Ltd", make: "Rolba", model: "Medium Combi", regPlate: "221-CE-1613", buildNumber: "1962", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "Rolba", model: "Medium Combi", regPlate: "V2 BBT", buildNumber: "1941", deliveryDate: "to be updated" },
+            { customer: "Billy Bowie", make: "Rolba", model: "Medium Combi", regPlate: "V3 BBT", buildNumber: "1942", deliveryDate: "to be updated" },
+            { customer: "William Gilder Ltd", make: "Rolba", model: "Medium Combi", regPlate: "FJ21 UJD", buildNumber: "1961", deliveryDate: "to be updated" },
+            { customer: "Clearwater", make: "Rolba", model: "Medium Combi", regPlate: "FJ71 TCZ", buildNumber: "2006", deliveryDate: "to be updated" },
+            { customer: "Clearwater", make: "Rolba", model: "Medium Combi", regPlate: "FJ71 TCZ", buildNumber: "2006", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "Rolba", model: "Medium Combi", regPlate: "SJ71 BBX", buildNumber: "2007", deliveryDate: "to be updated" },
+            { customer: "Eurotank", make: "Rolba", model: "Medium Combi", regPlate: "FJ71 SUX", buildNumber: "2011", deliveryDate: "to be updated" },
+            { customer: "McBreen Environmental", make: "Rolba", model: "Medium Combi", regPlate: "221-CN-741", buildNumber: "2015", deliveryDate: "to be updated" },
+            { customer: "Clearwater", make: "Rolba", model: "Medium Combi", regPlate: "FJ22 RCV", buildNumber: "2016", deliveryDate: "to be updated" },
+            { customer: "Eurotank", make: "Rolba", model: "Medium Combi", regPlate: "FJ22 PHX", buildNumber: "2018", deliveryDate: "to be updated" },
+            { customer: "Eurotank", make: "Rolba", model: "Medium Combi", regPlate: "FJ22 PLU", buildNumber: "2019", deliveryDate: "to be updated" },
+            { customer: "Clare Drains", make: "Rolba", model: "Medium Combi", regPlate: "222-CE-594", buildNumber: "2024", deliveryDate: "to be updated" },
+            { customer: "Eurotank", make: "Rolba", model: "Medium Combi", regPlate: "FJ72 TAV", buildNumber: "2036", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "Rolba", model: "Medium Combi", regPlate: "FJ72 SUU", buildNumber: "2042", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Rolba", model: "Medium Combi", regPlate: "FJ72 SXN", buildNumber: "2049", deliveryDate: "to be updated" },
+            { customer: "Convertwater", make: "Rolba", model: "Medium Combi", regPlate: "FJ23 SUU", buildNumber: "2078", deliveryDate: "to be updated" },
+            { customer: "Convertwater", make: "Rolba", model: "Medium Combi PED", regPlate: "FP73 EXC", buildNumber: "2079", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Rolba", model: "Medium Combi", regPlate: "FJ24 SWV", buildNumber: "2092", deliveryDate: "to be updated" },
+            { customer: "Trade Effluent Services Ltd", make: "Rolba", model: "Medium Combi", regPlate: "FJ24 SWZ", buildNumber: "2093", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "Rolba", model: "Medium Combi ADR", regPlate: "SG24 URX", buildNumber: "2087", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Rolba", model: "Medium Combi ADR", regPlate: "PN24 CKO", buildNumber: "2088", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi ADR", regPlate: "FD24 ZPH", buildNumber: "2108", deliveryDate: "to be updated" },
+            { customer: "CES Environmental Services", make: "Rolba", model: "Medium Combi", regPlate: "242-CE-998", buildNumber: "2110", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Rolba", model: "Medium Combi", regPlate: "FJ74 RVX", buildNumber: "2111", deliveryDate: "to be updated" },
+            { customer: "Clare Drains", make: "Rolba", model: "Medium Combi ADR", regPlate: "to be updated", buildNumber: "2115", deliveryDate: "to be updated" },
+            { customer: "Clearwater", make: "Rolba", model: "Super Combi", regPlate: "SN74 YUG", buildNumber: "15352", deliveryDate: "to be updated" },
+            { customer: "Enviro-Clean", make: "Rolba", model: "Medium Combi ADR", regPlate: "SL74 WJV", buildNumber: "2109", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Rolba", model: "Medium Combi", regPlate: "FJ74 RKU", buildNumber: "2128", deliveryDate: "to be updated" },
+            { customer: "Lanes Group PLC", make: "Rolba", model: "Medium Combi", regPlate: "FJ74 RKA", buildNumber: "2129", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2130", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2131", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2132", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi ADR", regPlate: "to be updated", buildNumber: "2133", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2142", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi ADR", regPlate: "to be updated", buildNumber: "2143", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2144", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2134", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2135", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Rolba", model: "Medium Combi ADR", regPlate: "to be updated", buildNumber: "2145", deliveryDate: "to be updated" },
+
+            
+
+
         ];
 
         const tableBody = document.getElementById("truckTable");
