ADDING NEW GAMON

--- a/customerlist.html
+++ b/customerlist.html
@@ -328,6 +328,12 @@
             { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2134", deliveryDate: "to be updated" },
             { customer: "to be updated", make: "Rolba", model: "Medium Combi", regPlate: "to be updated", buildNumber: "2135", deliveryDate: "to be updated" },
             { customer: "to be updated", make: "Rolba", model: "Medium Combi ADR", regPlate: "to be updated", buildNumber: "2145", deliveryDate: "to be updated" },
+            { customer: "McBreen Environmental", make: "Gamon", model: "Pac-9 UK", regPlate: "to be updated", buildNumber: "065.04.19.18", deliveryDate: "to be updated" },
+            { customer: "ROE Environmental", make: "Gamon", model: "Pac-9 UK", regPlate: "X10 ROE", buildNumber: "061.22.52.17", deliveryDate: "to be updated" },
+            { customer: "ROE Environmental", make: "Gamon", model: "Pac-15 Uk", regPlate: "V6 ROE", buildNumber: "060.21.52.17", deliveryDate: "to be updated" },
+            { customer: "JWJS", make: "Gamon", model: "Pac-15 UK 6", regPlate: "AY18 GWX", buildNumber: "070.09.27.18", deliveryDate: "to be updated" },
+            { customer: "JWJS", make: "Gamon", model: "Pac-18 UK", regPlate: "FN68 VKX", buildNumber: "074.13.31.18", deliveryDate: "to be updated" },
+            { customer: "to be updated", make: "Gamon", model: "Pac-10 UK", regPlate: "OE68 BEY", buildNumber: "071.10.28.15", deliveryDate: "to be updated" },
 
             
 
